# e-colles-scrapper

./: .env.example  pyproject.toml
kholles/: client.py  main.py
misc/: check_ecolle.py  parse_ods.py  push_grades.py  push_info.py
